--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "raseed",
   "version": "0.1.0",
   "private": true,
+  "overrides": {
+    "picomatch": "4.0.3"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -31,6 +34,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "5.8.3"
   }
 }
