--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "firebase": "^12.0.0",
     "google-auth-library": "^10.2.0",
     "jsonwebtoken": "^9.0.2",
-    "next": "15.4.3",
+    "next": "^15.4.5",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -33,7 +33,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.11",
     "typescript": "5.8.3"
   }
 }
