--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "typescript": "5.8.3"
   }
