--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "dev": "next dev",
-    "build": "dotenv -e .env.production next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
